--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Left Side -->
             <div class="left-column">
                 <img src="images/image.png" alt="Diljith PK" class="profile-pic">
-                <h2>Your Name</h2>
+                <h2>Diljith P K</h2>
                 <p>PhD Scholar @ University</p>
                 <div class="social-links">
                     <a href="https://scholar.google.com" target="_blank">
