--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div class="container">
             <!-- Left Side -->
             <div class="left-column">
-                <img src="images/image.png" alt="Diljith PK" class="profile-pic">
+                <img src="images/profilepicture.png" alt="Diljith PK" class="profile-pic">
                 <h2>Diljith P K</h2>
-                <p>PhD Scholar @ University</p>
+                <p>PhD Scholar @ Indian Institute of Technology Bombay</p>
                 <div class="social-links">
                     <a href="https://scholar.google.com" target="_blank">
                         <img src="images/google-scholar.svg" alt="Google Scholar" class="social-icon">
                     </a>                    
-                    <a href="https://www.linkedin.com" target="_blank">
+                    <a href="https://scholar.google.com/citations?user=Gqz2ovYAAAAJ&hl=en" target="_blank">
                         <img src="images/linkedin.svg" alt="LinkedIn" class="social-icon">
                     </a>
-                    <a href="mailto:yourname@gmail.com" target="_blank">
+                    <a href="mailto:diljithpk07@gmail.com" target="_blank">
                         <img src="images/email.svg" alt="Email" class="social-icon">
                     </a>
                 </div>
@@ -61,8 +61,8 @@
                 
                 <h3>Education</h3>
                 <ul>
-                    <li>Masters : University2</li><br>
-                    <li>Bachelors: University3</li>
+                    <li>Masters : National Institute of Technology Karnataka, Surathkal</li><br>
+                    <li>Bachelors: Government Engineering College Thrissur, Kerala</li>
                 </ul>
             </div>
         </div>
