Customizing the academic website

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <h2>Diljith P K</h2>
                 <p>PhD Scholar @ Indian Institute of Technology Bombay</p>
                 <div class="social-links">
-                    <a href="https://scholar.google.com/citations?user=Gqz2ovYAAAAJ&hl=en" target="_blank">
+                    <a href="https://scholar.google.com" target="_blank">
                         <img src="images/google-scholar.svg" alt="Google Scholar" class="social-icon">
                     </a>                    
-                    <a href="www.linkedin.com/in/diljithpk07" target="_blank">
+                    <a href="https://www.linkedin.com" target="_blank">
                         <img src="images/linkedin.svg" alt="LinkedIn" class="social-icon">
                     </a>
-                    <a href="mailto:diljithpk07@gmail.com" target="_blank">
+                    <a href="mailto:yourname@gmail.com" target="_blank">
                         <img src="images/email.svg" alt="Email" class="social-icon">
                     </a>
                 </div>
