--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://scholar.google.com/citations?user=Gqz2ovYAAAAJ&hl=en" target="_blank">
                         <img src="images/google-scholar.svg" alt="Google Scholar" class="social-icon">
                     </a>                    
-                    <a href="www.linkedin.com/in/diljithpk07" target="_blank">
+                    <a href="https://www.linkedin.com/in/diljithpk07" target="_blank">
                         <img src="images/linkedin.svg" alt="LinkedIn" class="social-icon">
                     </a>
                     <a href="mailto:diljithpk07@gmail.com" target="_blank">
